style.css fixed
I removed the navbar you did cause you put it as div, you should do the navbar as <nav></nav> and put the tag in a <header></header> tag cause it's better and more organized and I removed the css of the logo.
also use the images file and don't create another one like what you did Zeyad, also please change the background picture it doesn't fit and it's a game picture not a real thing you should use another one that is related to the contact us page.

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ select {
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
  html:focus-within {
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
  }
 
  *,
@@ -71,7 +71,7 @@ select {
   animation-duration: 0.01ms !important;
   animation-iteration-count: 1 !important;
   transition-duration: 0.01ms !important;
-  scroll-behavior: auto !important;
+  scroll-behavior: smooth !important;
  }
 }
 :root{
@@ -84,22 +84,8 @@ select {
 .banner {
  width: 100%;
  height: 100vh;
- background-image: linear-gradient(rgba(0, 0, 0, 0.671), rgba(0, 0, 0, 0.671)), url(pictures/back.jpg);
+ background-image: linear-gradient(rgba(0, 0, 0, 0.671), rgba(0, 0, 0, 0.671)), url(images/back.jpg);
  background-size: cover;
  background-position: center;
 }
 
-.navbar {
- width: 85%;
- margin: auto;
- padding: 35px 0;
- display: flex;
- align-items: center;
- justify-content: space-between;
-}
-
-.logo {
- width: 120px;
- cursor: pointer;
-
-}
